fix: remove the stretching of the image on the page of a separate movie

--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -2,14 +2,14 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 8px;
   padding-bottom: 40px;
   position: relative;
 }
 
 .imageContainer {
   width: 50%;
-  flex-grow: 0 1 auto;
+  flex-grow: 0;
 }
 
 .moviePoster {
@@ -17,6 +17,7 @@
   width: 100%;
   max-height: 600px;
   height: auto;
+  object-fit: contain;
 }
 
 .movieInfo {
